Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/Baja_automatica_flag__c.field-meta.xml
<CustomField>
    <fullName>Baja_automatica_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Baja automática flag</label>
    <type>Checkbox</type>
</CustomField>