Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Assignment_date_time__c.field-meta.xml
<CustomField>
    <fullName>CI_Assignment_date_time__c</fullName>
    <description>Fecha hora en que se asigna o reasigna la oportunidad.</description>
    <inlineHelpText>Fecha hora en que se asigna o reasigna la oportunidad.</inlineHelpText>
    <label>Fecha/Hora de asignación</label>
    <type>DateTime</type>
</CustomField>