Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Cambia_prop_cuenta__c.field-meta.xml
<CustomField>
    <fullName>CI_Cambia_prop_cuenta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para enviar notificación a asesor y jefe de cambio de propietario de la cuenta.</description>
    <inlineHelpText>Check para enviar notificación a asesor y jefe de cambio de propietario de la cuenta.</inlineHelpText>
    <label>Cambiar propietario de cuenta</label>
    <type>Checkbox</type>
</CustomField>