Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Cant_cotiza__c.field-meta.xml
<CustomField>
    <fullName>CI_Cant_cotiza__c</fullName>
    <description>Cantidad de cotizaciones creadas en la oportunidad.</description>
    <inlineHelpText>Cantidad de cotizaciones creadas en la oportunidad.</inlineHelpText>
    <label>Cantidad de cotizaciones</label>
    <summaryForeignKey>Cotizacion__c.CI_Oportunidad_PD__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>