Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Cod_Promo__c.field-meta.xml
<CustomField>
    <fullName>CI_Cod_Promo__c</fullName>
    <displayFormat>PRO-{00}</displayFormat>
    <label>Código de Promoción</label>
    <type>AutoNumber</type>
</CustomField>