Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Creada_desde_Lead__c.field-meta.xml
<CustomField>
    <fullName>CI_Creada_desde_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de bandera para validar si la oportunidad se generó por Conversión del Lead.</description>
    <inlineHelpText>Campo de bandera para validar si la oportunidad se generó por Conversión del Lead.</inlineHelpText>
    <label>Creada desde Lead</label>
    <type>Checkbox</type>
</CustomField>