Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Dias_de_gestion_transcurridos__c.field-meta.xml
<CustomField>
    <fullName>CI_Dias_de_gestion_transcurridos__c</fullName>
    <formula>IF( OR( ISPICKVAL(StageName , &apos;Vendida&apos;),ISPICKVAL(StageName , &apos;No negociada&apos;)),0,DATETIMEVALUE(TODAY())  -  CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días de gestión transcurridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>