Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>CI_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es duplicado?</label>
    <type>Checkbox</type>
</CustomField>