Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CI_Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Empresa__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>