Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_F_Cierre_PANACEA__c.field-meta.xml
<CustomField>
    <fullName>CI_F_Cierre_PANACEA__c</fullName>
    <label>Fecha Cierre PANACEA</label>
    <type>Date</type>
</CustomField>