Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Inicio__c</fullName>
    <label>Fecha de Inicio</label>
    <type>Date</type>
</CustomField>