Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Fecha_primera_cot__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_primera_cot__c</fullName>
    <description>Fecha en que se realizó la primera cotización.</description>
    <inlineHelpText>Fecha en que se realizó la primera cotización.</inlineHelpText>
    <label>Fecha de la primera cotización</label>
    <type>DateTime</type>
</CustomField>