Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Fecha_prox_act__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_prox_act__c</fullName>
    <description>Campo para controlar cuando se realizó la última gestión en la oportunidad.</description>
    <inlineHelpText>Campo para controlar cuando se realizó la última gestión en la oportunidad.</inlineHelpText>
    <label>Fecha de la próxima actividad</label>
    <type>Date</type>
</CustomField>