Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Fecha_ultima_cot__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_ultima_cot__c</fullName>
    <description>Fecha en que se realizó la última cotización.</description>
    <inlineHelpText>Fecha en que se realizó la última cotización.</inlineHelpText>
    <label>Fecha de la última cotización</label>
    <type>DateTime</type>
</CustomField>