Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Monto_de_Ingresos__c.field-meta.xml
<CustomField>
    <fullName>CI_Monto_de_Ingresos__c</fullName>
    <label>Monto de Ingresos</label>
    <length>50</length>
    <type>Text</type>
</CustomField>