Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Motivo_Baja__c.field-meta.xml
<CustomField>
    <fullName>CI_Motivo_Baja__c</fullName>
    <label>Motivo de Baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE NO ES PERFIL CREDITICIO</fullName>
            </value>
            <value>
                <fullName>SIN INTERÉS DE COMPRA</fullName>
            </value>
            <value>
                <fullName>CLIENTE COMPRÓ OTRO BIEN INMUEBLE</fullName>
            </value>
            <value>
                <fullName>CLIENTE YA EXISTE EN EL PROYECTO</fullName>
            </value>
            <value>
                <fullName>VENTA CERRADA</fullName>
            </value>
            <value>
                <fullName>PERFIL INGRESADO MANUALMENTE</fullName>
            </value>
            <value>
                <fullName>CLIENTE NO GUSTÓ DEL PROYECTO</fullName>
            </value>
            <value>
                <fullName>PLAZO 90 DÍAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>