Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Notificar_DDBM__c.field-meta.xml
<CustomField>
    <fullName>CI_Notificar_DDBM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notificar dado de baja de oportunidad manual.</description>
    <inlineHelpText>Notificar dado de baja de oportunidad manual.</inlineHelpText>
    <label>Notificar Dado de Baja Manual</label>
    <type>Checkbox</type>
</CustomField>