Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Notificar_OpIn__c.field-meta.xml
<CustomField>
    <fullName>CI_Notificar_OpIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificar Oportunidad Inactiva</label>
    <type>Checkbox</type>
</CustomField>