Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Numero_de_dormitorios__c.field-meta.xml
<CustomField>
    <fullName>CI_Numero_de_dormitorios__c</fullName>
    <label>Número de dormitorios</label>
    <length>50</length>
    <type>Text</type>
</CustomField>