Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>CI_Observaciones__c</fullName>
    <label>Observaciones</label>
    <type>TextArea</type>
</CustomField>