Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Origen_del_prospecto__c.field-meta.xml
<CustomField>
    <fullName>CI_Origen_del_prospecto__c</fullName>
    <formula>TEXT ( Account.CI_Origen__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen del prospecto</label>
    <type>Text</type>
</CustomField>