Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>CI_Proyecto__c</fullName>
    <description>Proyecto que viene asociado a la cuenta.</description>
    <formula>/*Account.CI_Proyecto__r.Name*/
Owner.CI_Nombre_Funcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Proyecto que viene asociado a la cuenta.</inlineHelpText>
    <label>Proyecto</label>
    <type>Text</type>
</CustomField>