Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Score__c.field-meta.xml
<CustomField>
    <fullName>CI_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>