Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_SLA_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CI_SLA_Oportunidad__c</fullName>
    <description>Días transcurridos desde que se creó la Oportunidad.</description>
    <formula>IF(
    (  
        NOT(
            OR(
                ISPICKVAL(StageName, &apos;Vendida&apos;),
                ISPICKVAL(StageName, &apos;No negociada&apos;)
            )
        )
    ), 
    IF(
        ISBLANK(CI_Assignment_date_time__c),
        NOW()-CreatedDate,
        NOW()-CI_Assignment_date_time__c
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Días transcurridos desde que se creó la Oportunidad.</inlineHelpText>
    <label>SLA Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>