Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_SLA_Total_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CI_SLA_Total_Oportunidad__c</fullName>
    <description>Total en días desde que se creó el registro (Prospecto-Cuenta-Oportunidad).</description>
    <formula>IF(
    AND(
        CI_Creada_desde_Lead__c = true,
        ISBLANK(CI_Assignment_date_time__c)
    ),
    Account.CI_SLA_Total__c + CI_SLA_Oportunidad__c,
    CI_SLA_Oportunidad__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total en días desde que se creó el registro (Prospecto-Cuenta-Oportunidad).</inlineHelpText>
    <label>SLA_Total_Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>