Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/CI_Tiempo_trans_venta__c.field-meta.xml
<CustomField>
    <fullName>CI_Tiempo_trans_venta__c</fullName>
    <description>Tiempo que transcurrió desde que se creó la oportunidad hasta que la oportunidad se cerró como vendida.</description>
    <formula>IF( TEXT (StageName ) = &apos;Vendida&apos;,  LastModifiedDate -  CreatedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tiempo que transcurrió desde que se creó la oportunidad hasta que la oportunidad se cerró como vendida.</inlineHelpText>
    <label>Tiempo transcurrido para la venta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>