Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/Consultas_Equifax__c.field-meta.xml
<CustomField>
    <fullName>Consultas_Equifax__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de veces que el asesor consulta desde la oportunidad a Equifax.</description>
    <inlineHelpText>Número de veces que el asesor consulta desde la oportunidad a Equifax.</inlineHelpText>
    <label>Consultas a Equifax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>