Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización Seleccionada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Cotizacion__c.Oportunidad__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cotizacion__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>