Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/Estado_de_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Aprobacion__c</fullName>
    <label>Estado de Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Fallido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>