Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/Estado_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Venta__c</fullName>
    <label>Estado de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cotizado</fullName>
            </value>
            <value>
                <fullName>Vendido</fullName>
            </value>
            <value>
                <fullName>Reestructurado</fullName>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
            <value>
                <fullName>Resciliado</fullName>
            </value>
            <value>
                <fullName>Estructurado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>