Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/FlagValidationRule__c.field-meta.xml
<CustomField>
    <fullName>FlagValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FlagValidationRule</label>
    <type>Checkbox</type>
</CustomField>