Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre Prospecto</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>