Inmob-Salesforce/force-app/main/default/objects/Opportunity/fields/ReasignadoAlGestor__c.field-meta.xml
<CustomField>
    <fullName>ReasignadoAlGestor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo sirve para reportaría y así reconocer las cuentas con oportunidades que han sido reasignadas por no gestionarlas.</description>
    <label>Reasignado al Gestor</label>
    <type>Checkbox</type>
</CustomField>