Inmob-Salesforce/force-app/main/default/objects/Opportunity/validationRules/Validacion_cotizacion_preferencial.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_cotizacion_preferencial</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Cotizacion__c != Null,
Cotizacion__r.Ingresa_Preferencial__c == True,
Cotizacion__r.CI_Aprobar_cotizacion_pref__c == False
)</errorConditionFormula>
    <errorMessage>No puede enviar una Oportunidad cuya Cotización Preferencial no ha sido aprobada.</errorMessage>
</ValidationRule>