Inmob-Salesforce/force-app/main/default/objects/Opportunity/validationRules/Validacion_Envio_ERP.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Envio_ERP</fullName>
    <active>true</active>
    <description>Valida los campos requeridos para envio a botón Reenvio a ERP</description>
    <errorConditionFormula>ISPICKVAL(Estado_de_Aprobacion__c,&quot;Enviado&quot;) &amp;&amp; ISBLANK(Cotizacion__c)</errorConditionFormula>
    <errorDisplayField>Estado_de_Aprobacion__c</errorDisplayField>
    <errorMessage>No se puede hacer el intento de envío si no se ha seleccionado una cotización para la negociación.</errorMessage>
</ValidationRule>