Inmob-Salesforce/force-app/main/default/objects/Opportunity/validationRules/Validacion_Oportunidad_Vendida.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Oportunidad_Vendida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Vendida&quot;),
NOT ( ISPICKVAL( Estado_de_Aprobacion__c, &quot;Aprobado&quot;) ),
NOT ( ISPICKVAL( Estado_de_Venta__c, &quot;Vendido&quot;) )
)</errorConditionFormula>
    <errorMessage>Para ganar la oportunidad tiene que estar aprobada y vendida.</errorMessage>
</ValidationRule>