Inmob-Salesforce/force-app/main/default/objects/Opportunity/validationRules/Validacion_Oportunidad_Vendida_Asesor.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Oportunidad_Vendida_Asesor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
!ISCHANGED(FlagValidationRule__c) ,
ISCHANGED(StageName),
OR(
ISPICKVAL(StageName,&quot;Vendida&quot;)
),
$Profile.Name==&quot;Asesor de Ventas&quot;
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Un Asesor no puede cambiar la Etapa de la Oportunidad a &quot;Vendida&quot; manualmente.</errorMessage>
</ValidationRule>