Inmob-Salesforce/force-app/main/default/objects/Opportunity/validationRules/Validacion_Oportunidad_Vendida_Asesor2.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Oportunidad_Vendida_Asesor2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(StageName),
ISPICKVAL(PRIORVALUE(StageName),&quot;Vendida&quot;),
ISPICKVAL(Estado_de_Venta__c,&quot;Vendido&quot;),
ISPICKVAL(Estado_de_Aprobacion__c,&quot;Aprobado&quot;),
$Profile.Name==&quot;Asesor de Ventas&quot;
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Un Asesor no puede cambiar la Etapa a una previa si ya esta Vendida.</errorMessage>
</ValidationRule>