Inmob-Salesforce/force-app/main/default/objects/Opportunity/validationRules/Validar_Estado_de_Venta.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Estado_de_Venta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Estado_de_Aprobacion__c ),
ISPICKVAL( PRIORVALUE( Estado_de_Aprobacion__c ),&quot;Aprobado&quot;),
ISPICKVAL( Estado_de_Venta__c,&quot;Vendido&quot; )
)</errorConditionFormula>
    <errorDisplayField>Estado_de_Aprobacion__c</errorDisplayField>
    <errorMessage>No puede modificar una oportunidad que ya ha sido aprobada y vendida.</errorMessage>
</ValidationRule>