Inmob-Salesforce/force-app/main/default/objects/Opportunity/validationRules/Validar_Oportunidad_Caida.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Oportunidad_Caida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(StageName),
ISPICKVAL(PRIORVALUE(StageName),&quot;No negociada&quot;),
$Profile.Name==&quot;Asesor de Ventas&quot;
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>No puede cambiar la etapa de la oportunidad una vez que está caída.</errorMessage>
</ValidationRule>