Inmob-Salesforce/force-app/main/default/objects/Opportunity/listViews/ClosingThisMonth.listView-meta.xml
<ListView>
    <fullName>ClosingThisMonth</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Cotizacion__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Proyecto__c</field>
        <operation>contains</operation>
        <value>vittoria</value>
    </filters>
    <label>Las que cierran este mes</label>
</ListView>