Inmob-Salesforce/force-app/main/default/objects/Opportunity/listViews/Oportuinidades_dadas_de_baja.listView-meta.xml
<ListView>
    <fullName>Oportuinidades_dadas_de_baja</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CI_Motivo_Baja__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>No negociada</value>
    </filters>
    <label>Oportuinidades dadas de baja</label>
    <sharedTo>
        <role>Asesor_Comercial_Villa_Italia</role>
    </sharedTo>
</ListView>