Inmob-Salesforce/force-app/main/default/objects/Opportunity/listViews/Oportunidades_dadas_de_baja.listView-meta.xml
<ListView>
    <fullName>Oportunidades_dadas_de_baja</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CI_Dias_sin_gestionar__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Estado_de_Aprobacion__c</columns>
    <columns>CI_Origen_del_prospecto__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>No negociada</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.WON</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Oportunidades dadas de baja</label>
    <sharedTo>
        <role>Jefe_Ventas_Rioja</role>
        <role>Jefe_Ventas_Vittoria</role>
    </sharedTo>
</ListView>